Capturing screenshots and mapping them to different threads

--- a/src/test/resources/properties/OR.properties
+++ b/src/test/resources/properties/OR.properties
@@ -12,5 +12,5 @@ addbtn_XPATH = //button[@type="submit"]
 openaccountBtn_XPATH = //button[@ng-click ="openAccount()"]
 customer_XPATH = //select[@ng-model ="custId"]
 currency_XPATH = //select[@ng-model ="currency"]
-processBtn_XPATH = //button[@type="submit"]
+processBtn_XPATH = //button[@type="submit3"]
 
